editing site generator to hide metadata

--- a/myst.yml
+++ b/myst.yml
@@ -10,6 +10,6 @@ project:
   # To autogenerate a Table of Contents, run "myst init --write-toc"
 site:
   template: book-theme
-  # options:
-  #   favicon: favicon.ico
-  #   logo: site_logo.png
+  options:
+    show_authors: false
+    show_subjects: false
