--- a/MBSE_Processes/myst.yml
+++ b/MBSE_Processes/myst.yml
@@ -1,15 +1,14 @@
-# See docs at: https://mystmd.org/guide/frontmatter
 version: 1
 project:
-  id: 99c0e753-ee97-473d-be93-b3324037e6ff
-  # title:
-  # description:
-  # keywords: []
-  # authors: []
-  github: https://github.com/hareemxd/process-wiki
-  # To autogenerate a Table of Contents, run "myst init --write-toc"
-site:
-  template: book-theme
-  # options:
-  #   favicon: favicon.ico
-  #   logo: site_logo.png
+  title: MBSE Processes
+  toc:
+    - file: index.md
+
+- title: Work Instructions
+  children:
+    - title: System Context Diagrams
+      file: Work Instructions/Problem Domain System Context Diagrams.md
+    - title: Peer Review
+      file: Work Instructions/Peer Review.md
+    - title: Teamwork Cloud Admin
+      file: Work Instructions/Teamwork Cloud Administrator.md
