--- a/MBSE_Processes/myst.yml
+++ b/MBSE_Processes/myst.yml
@@ -8,6 +8,7 @@ project:
         - file: Work Instructions/Problem Domain System Context Diagrams.md
         - file: Work Instructions/Peer Review.md
         - file: Work Instructions/Teamwork Cloud Administrator.md
+        - file: Work Instructions/Project Templates.md
 
 site:
   template: book-theme
