--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,21 +42,21 @@ jobs:
       - name: Build MBSE (served at /mbse/)
         run: |
           export BASE_URL="/${{ github.event.repository.name }}/mbse"
-          cd "MBSE_Processes"
+          cd "MBSE Style Guide"
           myst build --html
 
       - name: Verify MBSE output
         run: |
-          test -d "MBSE_Processes/_build/html" || (echo "MBSE build failed: no _build/html" && exit 1)
+          test -d "MBSE Style Guide/_build/html" || (echo "MBSE build failed: no _build/html" && exit 1)
 
       - name: Debug MBSE build output
         run: |
           echo "MBSE _build tree (depth 3):"
-          find "MBSE_Processes/_build" -maxdepth 3 -type d -print || true
+          find "MBSE Style Guide/_build" -maxdepth 3 -type d -print || true
           echo "MBSE html tree (depth 3):"
-          find "MBSE_Processes/_build/html" -maxdepth 3 -type d -print || true
-          echo "Search for one known image name anywhere in MBSE_Processes:"
-          find "MBSE_Processes" -type f -iname "PDSCDiagramsMetaModel.png" -print || true
+          find "MBSE Style Guide/_build/html" -maxdepth 3 -type d -print || true
+          echo "Search for one known image name anywhere in MBSE Style Guide:"
+          find "MBSE Style Guide" -type f -iname "PDSCDiagramsMetaModel.png" -print || true
 
       # -----------------------------
       # Build CM Handbook site
@@ -80,14 +80,14 @@ jobs:
           mkdir -p _site/mbse _site/handbook
 
           # Copy built MyST sites
-          cp -a "MBSE_Processes/_build/html/." "_site/mbse/"
+          cp -a "MBSE Style Guide/_build/html/." "_site/mbse/"
           cp -a "Configuration Management Handbook/_build/html/." "_site/handbook/"
 
           # Force-copy images into the deployed output so image paths can resolve at runtime.
           # (Does not depend on MyST bundling.)
-          if [ -d "MBSE_Processes/img" ]; then
+          if [ -d "MBSE Style Guide/img" ]; then
             mkdir -p "_site/mbse/img"
-            cp -a "MBSE_Processes/img/." "_site/mbse/img/"
+            cp -a "MBSE Style Guide/img/." "_site/mbse/img/"
           fi
 
           if [ -d "Configuration Management Handbook/img" ]; then
