--- a/MBSE_Style_Guide/myst.yml
+++ b/MBSE_Style_Guide/myst.yml
@@ -1,6 +1,6 @@
 version: 1
 project:
-  title: MBSE Processes
+  title: MBSE Style Guide
   toc:
     - file: index.md
     - title: Work Instructions
