--- a/MBSE_Style_Guide/myst.yml
+++ b/MBSE_Style_Guide/myst.yml
@@ -3,12 +3,12 @@ project:
   title: MBSE Style Guide
   toc:
     - file: index.md
-    - title: Work Instructions
+    - title: Work_Instructions
       children:
-        - file: "Work Instructions/Problem Domain System Context Diagrams.md"
-        - file: "Work Instructions/Peer Review.md"
-        - file: "Work Instructions/Teamwork Cloud Administrator.md"
-        - file: "Work Instructions/Project Templates.md"
+        - file: "Work_Instructions/Problem Domain System Context Diagrams.md"
+        - file: "Work_Instructions/Peer Review.md"
+        - file: "Work_Instructions/Teamwork Cloud Administrator.md"
+        - file: "Work_Instructions/Project Templates.md"
     - title: Procedures
       children:
         - file: ""
